--- a/src/app/modul-contracte/contract-general/contract-general.component.css
+++ b/src/app/modul-contracte/contract-general/contract-general.component.css
@@ -1,37 +1,81 @@
-
 label{
-    text-align: left;
+  text-align: left;
+}
+
+form {
+  height: 800px;
+}
+#container {
+  background-color: #ffffff;
+}
+
+  body {
+    background: black;
   }
   
-  form {
-    height: 800px;
+  .col-sm-1   {
+    height: 70px;
+    text-align: right;
   }
-  #container {
-    background-color: #ffffff;
+   .col-sm-2 {
+    height: 70px;
+    text-align: right;
   }
-  
-  #Tabs {
-    background-color: #ffffff;
+   .col-sm-5  {
+    height: 70px;
+    position:relative;
+    text-align:center;
   }
-    body {
-      background: black;
-    }
-    
-    .col-sm-1   {
-      height: 60px;
-      text-align: right;
-    }
-     .col-sm-2 {
-      height: 60px;
-      text-align: right;
-    }
-     .col-sm-5  {
-      height: 60px;
-      position:relative;
-      text-align:center;
-    }
-    .col-sm-4  {
-      height: 60px;
-      position:relative;
-      text-align:center;
-    }
+  .col-sm-4  {
+    height: 70px;
+    position:relative;
+    text-align:center;
+  }
+  .col-sm-10  {
+    height: 70px;
+    position:relative;
+    text-align:center;
+  }
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.dialog {
+  z-index: 1000;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  min-height: 200px;
+  width: 90%;
+  max-width: 520px;
+  background-color: #fff;
+  padding: 12px;
+  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
+}
+
+@media (min-width: 768px) {
+  .dialog {
+    top: 40px;
+  }
+}
+
+.dialog__close-btn {
+  border: 0;
+  background: none;
+  color: #2d2d2d;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-size: 1.2em;
+}
