--- a/src/app/modul-contracte/contract-general/contract-general.component.html
+++ b/src/app/modul-contracte/contract-general/contract-general.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills">
                 <li role="presentation" class="active">
-                        <a routerLink="contract-alerts"> General</a>
+                        <a routerLink="contract-general"> General</a>
                 </li>
                 <li role="presentation">
                         <a routerLink="contract-financial"> Financiar</a>
