--- a/src/app/modul-contracte/contract-tasks/contract-tasks.component.html
+++ b/src/app/modul-contracte/contract-tasks/contract-tasks.component.html
@@ -1,3 +1,27 @@
-<p>
-  contract-tasks works!
-</p>
+<ul class="nav nav-pills">
+    <li role="presentation">
+            <a> General</a>
+    </li>
+    <li role="presentation">
+            <a> Financiar</a>
+    </li>
+    <li role="presentation">
+            <a>Documente</a>
+    </li>
+    <li role="presentation" class="active">
+            <a>Task</a>
+    </li>
+    <li role="presentation">
+            <a >Istoric</a>
+    </li>
+    <li role="presentation">
+            <a> Alerte</a>
+    </li>
+</ul>
+
+<button (click)="navigateOnParentGen()">General</button>
+<button (click)="navigateOnParentDoc()">Document</button>
+<button (click)="navigateOnParentTask()">Task</button>
+<button (click)="navigateOnParentAlert()">Alerte</button>
+<button (click)="navigateOnParentHist()">Istoric</button>
+<button (click)="navigateOnParentFin()">Financiar</button>
