--- a/src/app/modul-contracte/contract-financial/contract-financial.component.html
+++ b/src/app/modul-contracte/contract-financial/contract-financial.component.html
@@ -1,27 +1,21 @@
 <ul class="nav nav-pills">
     <li role="presentation">
-            <a> General</a>
+            <a (click)="navigateOnParentGen()"> General</a>
     </li>
     <li role="presentation" class="active">
-            <a> Financiar</a>
+            <a (click)="navigateOnParentFin()"> Financiar</a>
     </li>
     <li role="presentation">
-                <a href="" ng-click="navigateOnParentDoc()"> Document</a>
+        <a (click)="navigateOnParentDoc()">Documente</a>
     </li>
     <li role="presentation">
-            <a>Task</a>
+            <a (click)="navigateOnParentTask()">Task</a>
     </li>
     <li role="presentation">
-            <a>Istoric</a>
+            <a (click)="navigateOnParentHist()">Istoric</a>
     </li>
     <li role="presentation">
-            <a> Alerte</a>
+            <a (click)="navigateOnParentAlert()">  Alerte</a>
     </li>
 </ul>
 
-<button (click)="navigateOnParentGen()">General</button>
-<button (click)="navigateOnParentDoc()">Document</button>
-<button (click)="navigateOnParentTask()">Task</button>
-<button (click)="navigateOnParentAlert()">Alerte</button>
-<button (click)="navigateOnParentHist()">Istoric</button>
-<button (click)="navigateOnParentFin()">Financiar</button>
