--- a/src/app/modul-contracte/contract-alerts/contract-alerts.component.html
+++ b/src/app/modul-contracte/contract-alerts/contract-alerts.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills">
         <li role="presentation">
-                <a   (click)="navigateOnParentGen()"> General</a>
+                <a   (click)="butonGeneral()"> General</a>
         </li>
         <li role="presentation">
                 <a   (click)=navigateOnParentFin()> Financiar</a>
