--- a/src/app/modul-contracte/contract-documents/contract-documents.component.html
+++ b/src/app/modul-contracte/contract-documents/contract-documents.component.html
@@ -1,22 +1,22 @@
 <ul class="nav nav-pills">
-        <li role="presentation">
-                <a (click)="navigateOnParentGen()"> General</a>
-        </li>
-        <li role="presentation">
-                <a (click)="navigateOnParentFin()"> Financiar</a>
-        </li>
-        <li role="presentation" class="active">
-                <a (click)="navigateOnParentDoc()">Documente</a>
-        </li>
-        <li role="presentation">
-                <a (click)="navigateOnParentTask()">Task</a>
-        </li>
-        <li role="presentation">
-                <a (click)="navigateOnParentHist()">Istoric</a>
-        </li>
-        <li role="presentation">
-                <a (click)="navigateOnParentAlert()"> Alerte</a>
-        </li>
+  <li role="presentation" >
+          <a routerLink="/contract-general"> General</a>
+  </li>
+  <li role="presentation" >
+          <a routerLink="/contract-financial"> Financiar</a>
+  </li>
+  <li role="presentation">
+          <a routerLink="/contract-documents" class="active">Documente</a>
+  </li>
+  <li role="presentation">
+          <a routerLink="/contract-tasks">Task</a>
+  </li>
+  <li role="presentation">
+          <a routerLink="/contract-history">Istoric</a>
+  </li>
+  <li role="presentation" >
+          <a routerLink="/contract-alerts"> Alerte</a>
+  </li>
 </ul>
 
 <div class="container-fluid">
