--- a/src/app/modul-contracte/contract-history/contract-history.component.html
+++ b/src/app/modul-contracte/contract-history/contract-history.component.html
@@ -1,22 +1,20 @@
 <ul class="nav nav-pills">
-        <li role="presentation">
-                <a   (click)="navigateOnParentGen()"> General</a>
+        <li role="presentation" >
+                <a routerLink="/contract-general"> General</a>
+        </li>
+        <li role="presentation" >
+                <a routerLink="/contract-financial"> Financiar</a>
         </li>
         <li role="presentation">
-                <a   (click)="navigateOnParentFin()"> Financiar</a>
+                <a routerLink="/contract-documents">Documente</a>
         </li>
         <li role="presentation">
-            <a   (click)="navigateOnParentDoc()">Documente</a>
-        </li>
-        <li role="presentation">
-                <a   (click)="navigateOnParentTask()">Task</a>
+                <a routerLink="/contract-tasks">Task</a>
         </li>
         <li role="presentation" class="active">
-                <a   (click)="navigateOnParentHist()">Istoric</a>
+                <a routerLink="/contract-history">Istoric</a>
         </li>
         <li role="presentation">
-                <a   (click)="navigateOnParentAlert()">  Alerte</a>
+                <a routerLink="/contract-alerts"> Alerte</a>
         </li>
-    </ul>
-    
-    
+</ul>
