schimbare rutare - cale corecta

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
                                     Modul Contracte
                                 </mat-panel-title>
                             </mat-expansion-panel-header>
-                            <a routerLink="modul-contracte/contract-list">
+                            <a routerLink="contract-list">
                                 Contracte
                             </a>
                         </mat-expansion-panel>
