--- a/src/app/modul-contracte/contract-alerts/contract-alerts.component.html
+++ b/src/app/modul-contracte/contract-alerts/contract-alerts.component.html
@@ -1,20 +1,20 @@
 <ul class="nav nav-pills">
         <li role="presentation" >
-                <a routerLink="/contract-general"> General</a>
+                <a routerLink="/contract-list/contract-general"> General</a>
         </li>
         <li role="presentation" >
-                <a routerLink="/contract-financial"> Financiar</a>
+                <a routerLink="/contract-list/contract-financial"> Financiar</a>
         </li>
         <li role="presentation">
-                <a routerLink="/contract-documents">Documente</a>
+                <a routerLink="/contract-list/contract-documents">Documente</a>
         </li>
         <li role="presentation">
-                <a routerLink="/contract-tasks">Task</a>
+                <a routerLink="/contract-list/contract-tasks">Task</a>
         </li>
         <li role="presentation">
-                <a routerLink="/contract-history">Istoric</a>
+                <a routerLink="/contract-list/contract-history">Istoric</a>
         </li>
-        <li role="presentation" class="active" >
-                <a routerLink="/contract-alerts"> Alerte</a>
+        <li role="presentation">
+                <a routerLink="/contract-list/contract-alerts"> Alerte</a>
         </li>
-</ul>
+      </ul>
