modificare pagina general cu material

--- a/src/app/modul-contracte/contract-alerts/contract-alerts.component.html
+++ b/src/app/modul-contracte/contract-alerts/contract-alerts.component.html
@@ -14,7 +14,7 @@
         <li role="presentation">
                 <a routerLink="/contract-list/contract-history">Istoric</a>
         </li>
-        <li role="presentation">
+        <li role="presentation" class="active">
                 <a routerLink="/contract-list/contract-alerts"> Alerte</a>
         </li>
       </ul>
