--- a/src/app/modul-contracte/contract-general/contract-general.component.css
+++ b/src/app/modul-contracte/contract-general/contract-general.component.css
@@ -1,99 +1,24 @@
-select  {
-  height: 30px;
-  width: 80%;
-}
-input  {
-  height: 30px;
-  width: 80%;
-}
-label {display:block; width:x; height:y; text-align:left;}
-a {
-  color: #ffffff;
-}
-a:hover {
-  color: blue;
-}
-form {
-  height: 800px;
-}
-#container {
-  background-color: #ffffff;
+/* mat-grid-tile {
+  background: lightblue;
+} */
+
+.InputBorder {
+  border-style: groove;
 }
 
-  body {
-    background: black;
-  }
-  
-  /* input {
-    font-size: 90%;
-  } */
-  .radio {
-    height: 60px;
-    text-align: right;
-  }
+.mat-grid-tile .mat-figure { justify-content: right !important; }
 
-  .col-sm-1   {
-    height: 60px;
-    text-align: right;
-    
-  }
-   .col-sm-2 {
-    height: 60px;
-    text-align: right;
-  }
-   .col-sm-5  {
-    height: 60px;
-    text-align:right;
-  }
-  .col-sm-4  {
-    height: 60px;
-    text-align:right;
-  }
-  .col-sm-10  {
-    height: 60px;
-    text-align:right;
-  }
+.VerticalLine {
+  border-right: 4px solid rgb(255, 255, 255);
+  border-left: 4px solid rgb(255, 255, 255);;
 
-
-
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
 }
 
-.dialog {
-  z-index: 1000;
-  position: fixed;
-  right: 0;
-  left: 0;
-  top: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  min-height: 200px;
-  width: 90%;
-  max-width: 520px;
-  background-color: #fff;
-  padding: 12px;
-  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
-}
-
-@media (min-width: 768px) {
-  .dialog {
-    top: 40px;
-  }
-}
-
-.dialog__close-btn {
+hr {
+  display: block;
+  height: 1px;
   border: 0;
-  background: none;
-  color: #2d2d2d;
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  font-size: 1.2em;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
