--- a/src/app/modul-contracte/contract-general/contract-general.component.html
+++ b/src/app/modul-contracte/contract-general/contract-general.component.html
@@ -49,6 +49,21 @@
                                 </mat-option>
                         </mat-select>
                 </mat-grid-tile>
+
+                <mat-grid-tile>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                </mat-grid-tile>
+                <mat-grid-tile class="LabelLeft">
+                        Categorie
+                </mat-grid-tile>
+                <mat-grid-tile class="InputBorder" colspan="2">
+                        <mat-select>
+                                <mat-option *ngFor="let partner of PartenerName" [value]="partner.value">
+                                        {{ partner.viewValue }}
+                                </mat-option>
+                        </mat-select>
+                </mat-grid-tile>
         </mat-grid-list>
 
         <mat-grid-list cols="12" rowHeight="5:1">
@@ -69,7 +84,24 @@
                                 </mat-option>
                         </mat-select>
                 </mat-grid-tile>
+                <mat-grid-tile>
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                                </mat-grid-tile>
+                        <mat-grid-tile class="LabelLeft">
+                                Departament
+                        </mat-grid-tile>
+                        <mat-grid-tile class="InputBorder" colspan="2">
+                                <mat-select>
+                                        <mat-option *ngFor="let partner of PartenerName" [value]="partner.value">
+                                                {{ partner.viewValue }}
+                                        </mat-option>
+                                </mat-select>
+                        </mat-grid-tile>
         </mat-grid-list>
+
         <mat-grid-list cols="12" rowHeight="5:1">
                 <mat-grid-tile>
                 </mat-grid-tile>
@@ -84,6 +116,16 @@
                 <mat-grid-tile class="InputBorder" colspan="2">
                         <input type="text" class="InputSpecial">
                 </mat-grid-tile>
+                <mat-grid-tile>
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                                </mat-grid-tile>
+                        <mat-grid-tile class="LabelLeft">
+                                Responsabil
+                        </mat-grid-tile>
+                        <mat-grid-tile class="InputBorder" colspan="2">
+                                <input type="text" class="InputSpecial">
+                        </mat-grid-tile>
         </mat-grid-list>
         <mat-grid-list cols="12" rowHeight="5:1">
                 <mat-grid-tile>
@@ -99,6 +141,20 @@
                 <mat-grid-tile class="InputBorder" colspan="2">
                         <input type="text" class="InputSpecial">
                 </mat-grid-tile>
+                <mat-grid-tile>
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                                </mat-grid-tile>
+                        <mat-grid-tile class="LabelLeft">
+                                Tip Chelt/Venit
+                        </mat-grid-tile>
+                        <mat-grid-tile class="InputBorder" colspan="2">
+                                        <mat-select>
+                                                        <mat-option *ngFor="let partner of PartenerName" [value]="partner.value">
+                                                                {{ partner.viewValue }}
+                                                        </mat-option>
+                                                </mat-select>
+                        </mat-grid-tile>
         </mat-grid-list>
 
         <mat-grid-list cols="12" rowHeight="5:1">
@@ -107,22 +163,33 @@
         </mat-grid-list>
 
         <mat-grid-list cols="12" rowHeight="2:1">
-        
-                <mat-grid-tile class="LabelLeft">
-                        
+
+                <mat-grid-tile >
                 </mat-grid-tile>
-                <mat-grid-tile colspan="4" rowHeight="2:1">
-                                <mat-form-field class="VerticalLine">
-                                                <input matInput [matDatepicker]="picker1" placeholder="Data semnare">
-                                                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                                                <mat-datepicker #picker1></mat-datepicker>
-                                        </mat-form-field>
+                <mat-grid-tile colspan="4" >
                         <mat-form-field class="VerticalLine">
-                                        <input matInput [matDatepicker]="picker3" placeholder="Durata">
-                                        <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
-                                        <mat-datepicker #picker3></mat-datepicker>
-                                </mat-form-field>
+                                <input matInput [matDatepicker]="picker01" placeholder="Data semnare">
+                                <mat-datepicker-toggle matSuffix [for]="picker01"></mat-datepicker-toggle>
+                                <mat-datepicker #picker01></mat-datepicker>
+                        </mat-form-field>
+                        <mat-form-field class="VerticalLine">
+                                <input matInput [matDatepicker]="picker03" placeholder="Durata">
+                                <mat-datepicker-toggle matSuffix [for]="picker03"></mat-datepicker-toggle>
+                                <mat-datepicker #picker03></mat-datepicker>
+                        </mat-form-field>
                 </mat-grid-tile>
+                <mat-grid-tile >
+                        </mat-grid-tile>
+                        <mat-grid-tile > Prelungire A
+                                </mat-grid-tile>
+                                <mat-grid-tile >
+                                                <mat-radio-group [(ngModel)]="align">
+                                                                <mat-radio-button  value="Da">Da</mat-radio-button>
+                                                                <mat-radio-button  value="Nu">Nu</mat-radio-button>
+                                                              </mat-radio-group>
+                                        </mat-grid-tile>
+
+
         </mat-grid-list>
 
         <mat-grid-list cols="12" rowHeight="5:1">
@@ -133,26 +200,39 @@
 
 
         <mat-grid-list cols="12" rowHeight="2:1">
-              
+
                 <mat-grid-tile class="LabelLeft">
                 </mat-grid-tile>
-                <mat-grid-tile colspan="10">
+                <mat-grid-tile colspan="4">
 
                         <mat-form-field class="VerticalLine">
-                                <input matInput [matDatepicker]="picker4" placeholder="Data Start  ">
-                                <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
-                                <mat-datepicker #picker4></mat-datepicker>
+                                <input matInput  [matDatepicker]="picker04" placeholder="Data Start  ">
+                                <mat-datepicker-toggle matSuffix [for]="picker04"></mat-datepicker-toggle>
+                                <mat-datepicker #picker04></mat-datepicker>
                         </mat-form-field>
 
                         <mat-form-field class="VerticalLine">
-                                <input matInput [matDatepicker]="picker2" placeholder="Data Final  ">
-                                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                <mat-datepicker #picker2></mat-datepicker>
+                                <input matInput [matDatepicker]="picker02" placeholder="Data Final  ">
+                                <mat-datepicker-toggle matSuffix [for]="picker02"></mat-datepicker-toggle>
+                                <mat-datepicker #picker02></mat-datepicker>
                         </mat-form-field>
-
                 </mat-grid-tile>
+                <mat-grid-tile>
+                        </mat-grid-tile>
                 <mat-grid-tile colspan="2">
+                                <mat-form-field class="VerticalLine">
+                                <input matInput [matDatepicker]="picker06" placeholder="Data Notificare  ">
+                                <mat-datepicker-toggle matSuffix [for]="picker06"></mat-datepicker-toggle>
+                                <mat-datepicker #picker06></mat-datepicker>
+                                
+                  </mat-form-field>
                 </mat-grid-tile>
+                <mat-grid-tile colspan="1">
+                        Nr. zile Notif.
+                </mat-grid-tile>
+                <mat-grid-tile colspan="1">
+                                <input type="text" class="InputSpecial">
+                        </mat-grid-tile>
         </mat-grid-list>
         <mat-grid-list cols="12" rowHeight="5:1">
                 <mat-grid-tile>
@@ -177,6 +257,29 @@
                                 </mat-option>
                         </mat-select>
                 </mat-grid-tile>
+
+                <mat-grid-tile>
+                        </mat-grid-tile>
+                        <mat-grid-tile class="LabelLeft">
+                                Centru Cost
+                        </mat-grid-tile>
+                        <mat-grid-tile class="InputBorder" colspan="1">
+                                <mat-select>
+                                        <mat-option *ngFor="let type of StateContract" [value]="type.value">
+                                                {{ type.viewValue }}
+                                        </mat-option>
+                                </mat-select>
+                        </mat-grid-tile>
+                        <mat-grid-tile class="LabelLeft">
+                                Linie CF
+                        </mat-grid-tile>
+                        <mat-grid-tile class="InputBorder" colspan="1">
+                                <mat-select>
+                                        <mat-option *ngFor="let type of StatusContract" [value]="type.value">
+                                                {{ type.viewValue }}
+                                        </mat-option>
+                                </mat-select>
+                        </mat-grid-tile>
         </mat-grid-list>
 
         <mat-grid-list cols="12" rowHeight="5:1">
@@ -275,5 +378,6 @@
                         <input type="text" class="InputSpecial">
                 </mat-grid-tile>
         </mat-grid-list>
+     <hr>               
 
 </div>
